code25_all/python/2420984.txt
C:\swigwin-1.3.40> c:\python26\python.exe configure

  File "configure", line 16
    DUALCASE=1; export DUALCASE # for MKS sh
                              ^
SyntaxError: invalid syntax

C:\clearsilver-0.10.5>C:\python26\python.exe ./configure

  File "./configure", line 13
    if test -n "${ZSH_VERSION+set}" && (emulate sh) >/dev/null 2>&1; then
                                  ^
SyntaxError: invalid syntax

